2017-05-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-662

	* src/m_fos.cc (iyHybrid): A bit more ...

	* src/m_rte.cc (iyEmissionStandard):
	* src/m_transmitter.cc (iyRadioLink, iyTransmissionStandard): Just
	formatting changes.

2017-05-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-661

	* src/m_fos.cc (iyHybrid): Some small steps forward ...

2017-05-23  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-660

	* CMakeLists.txt, config.h.cmake, src/CMakeLists.txt, src/m_oem.cc,
	src/main.cc:

	Separate C++11 support from OEM support. Before, C++11 support had to
	be forcibly disabled for clang because invlib doesn't compile with it.
	Now, only OEM, not C++11, is disabled by default if clang is used.
	It can be reenabled for testing with clang with -DENABLE_OEM=1 .

	* CMakeLists.txt, README:

	Add support for ccache (-DENABLE_CCACHE=1). https://ccache.samba.org/

	* src/array.h: Add std:: before fill calls.

2017-05-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-659

	* src/m_fos.cc (iyHybrid): Just a start on testing out a hybrid
	scattering solver.

	* src/m_transmitter.cc (iyTransmissionStandard):
	* src/m_rte.cc (iyEmissionStandard): Just changes in comments and
	indentation.

	* src/agendas.cc: Added doit_i_field_agenda.

2017-05-16  Jakob Doerr  <jakobdoerr@googlemail.com>

	* arts-2-3-658

	* src/m_doit.cc (OptimizeDoitPressureGrid, doit_scat_fieldCalc,
	doit_scat_fieldCalcLimb), m_optproperties.cc (DoitScatteringDataPrepare,
	TestScatDataInterp):
	Pulled the temperature interpolation of the phase matrix out of the 
	interation loop	in DOIT. The interpolation of the phase matrix is now
	done in DoitScatteringDataPrepare, so before the loop. Before it was
	interpolated in doit_scat_fieldCalc and doit_scat_fieldCalcLimb. 
	This saves a lot of time for DOIT. The phase matrix is now stored in a 
	new WS variable, pha_mat_doit. 

	* src/methods.cc: 
	Changed the methods according to the change above
